--- a/i18n/localized.en.yaml
+++ b/i18n/localized.en.yaml
@@ -53,6 +53,21 @@
   description: A string for the label of copy button.
   raw: Copy
 
+- name: COMMON_PREVIEW_BUTTON
+  value: Preview
+  description: A string for the label of preview button.
+  raw: Preview
+
+- name: COMMON_MOVE_UP_BUTTON
+  value: Move Up
+  description: A string for the label of move up button.
+  raw: Move Up
+
+- name: COMMON_MOVE_DOWN_BUTTON
+  value: Move Down
+  description: A string for the label of move down button.
+  raw: Move Down
+
 - name: COMMON_ERROR_TITLE
   value: Error
   description: A string for the title of error message.
@@ -187,6 +202,11 @@
   value: Problems
   description: A string for the label of problems navigation.
   raw: Problems
+
+- name: NAVIGATION_PROBLEM_NEW
+  value: New Problem
+  description: A string for the label of new problem navigation.
+  raw: New Problem
 
 - name: NAVIGATION_PROBLEM_SETS
   value: Problem Sets
@@ -388,6 +408,21 @@
     password.
   raw: Password confirm does not match the password.
 
+- name: VALIDATION_ERROR_TITLE_EMPTY
+  value: Title cannot be empty.
+  description: A string for the error message when title is empty.
+  raw: Title cannot be empty.
+
+- name: VALIDATION_ERROR_ID_EMPTY
+  value: ID cannot be empty.
+  description: A string for the error message when ID is empty.
+  raw: ID cannot be empty.
+
+- name: VALIDATION_ERROR_PROBLEM_TITLE_TOO_LONG
+  value: The problem title is too long. Please shorten it.
+  description: A string for the error message when the problem title is too long.
+  raw: The problem title is too long. Please shorten it.
+
 - name: VISIBILITY_LABEL_PUBLIC
   value: Public
   description: A string for the visibility of public.
@@ -498,6 +533,16 @@
   description: A string for the label of problem sample explanation.
   raw: Explanation
 
+- name: PROBLEM_SAMPLE_DELETE_CONFIRM
+  value: Are you sure to delete the sample?
+  description: A string for the confirmation message when deleting the sample.
+  raw: Are you sure to delete the sample?
+
+- name: PROBLEM_SAMPLE_ADD_BUTTON
+  value: Add Sample
+  description: A string for the label of add sample button.
+  raw: Add Sample
+
 - name: PROBLEM_TAGS_LABEL
   value: Tags
   description: A string for the label of problem tags.
@@ -517,6 +562,20 @@
   value: No tags.
   description: A string for the text when there are no tags.
   raw: No tags.
+
+- name: PROBLEM_EDIT_TITLE_WITH_ID
+  value: '#{0}({1}). {2} - Edit'
+  description: >-
+    A string for the title of problem edit page. {0} is the problem display ID,
+    {1} is the problem ID, and {2} is the problem title.
+  raw: '#{0}({1}). {2} - Edit'
+
+- name: PROBLEM_EDIT_TITLE
+  value: '#{0}. {1} - Edit'
+  description: >-
+    A string for the title of problem edit page. {0} is the problem display ID,
+    and {1} is the problem title.
+  raw: '#{0}. {1} - Edit'
 
 - name: CODE_COPIED_MESSAGE
   value: The code is copied to the clipboard.
