--- a/i18n/localized.en.yaml
+++ b/i18n/localized.en.yaml
@@ -183,6 +183,11 @@
   description: A string for the error message when no such problem file.
   raw: No such problem file.
 
+- name: ERROR_2207_DUPLICATE_DISPLAY_ID
+  value: The problem ID is already used.
+  description: A string for the error message when the problem ID is already used.
+  raw: The problem ID is already used.
+
 - name: CUSTOM_ERROR_PAGE_NOT_FOUND
   value: Page not found.
   description: A string for the error message when the page is not found.
@@ -562,6 +567,11 @@
   value: No tags.
   description: A string for the text when there are no tags.
   raw: No tags.
+
+- name: PROBLEM_EDIT_GEN_ID
+  value: Generate ID
+  description: A string for the label of generate ID button.
+  raw: Generate ID
 
 - name: PROBLEM_EDIT_TITLE_WITH_ID
   value: '#{0}({1}). {2} - Edit'
