--- a/i18n/localized.en.yaml
+++ b/i18n/localized.en.yaml
@@ -488,6 +488,21 @@
   description: A string for the label of disabled user level.
   raw: Disabled
 
+- name: USER_BIO_LABEL
+  value: Bio
+  description: A string for the label of user bio.
+  raw: Bio
+
+- name: USER_NICKNAME_LABEL
+  value: Nickname
+  description: A string for the label of user nickname.
+  raw: Nickname
+
+- name: USER_AVATAR_LABEL
+  value: Avatar
+  description: A string for the label of user avatar.
+  raw: Avatar
+
 - name: PROBLEM_SEARCH_PLACEHOLDER
   value: Keyword or ID
   description: A string for the placeholder of problem search input.
