--- a/i18n/raw.yaml
+++ b/i18n/raw.yaml
@@ -54,6 +54,10 @@
   value: Move Down
   description: A string for the label of move down button.
 
+- name: COMMON_SUBMIT_BUTTON
+  value: Submit
+  description: A string for the label of submit button.
+
 - name: COMMON_ERROR_TITLE
   value: Error
   description: A string for the title of error message.
